--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,16 @@ body {
     background-color: #d9dcd6;
 }
 
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+
+/* styles for header and nav */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -38,15 +48,7 @@ ul li {
     margin-left: 25px;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
-}
-
+/* styles for the hero image */
 #hero {
     height: 800px;
     width: 100%;
@@ -54,6 +56,7 @@ p {
     margin-bottom: 25px;
 }
 
+/* styles for images in main-content */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -64,6 +67,7 @@ p {
     margin-left: 25px;
 }
 
+/* styles for the main content */
 main {
     width: 75%;
     display: inline-block;
@@ -88,6 +92,7 @@ main {
     font-size: 36px;
 }
 
+/* styles for the aside content  */
 aside {
     margin-right: 20px;
     padding: 20px;
@@ -115,6 +120,7 @@ aside {
     max-width: 150px;
 }
 
+/* styles for the footer  */
 footer {
     padding: 30px;
     clear: both;
